--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.0.1",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.13",
+    "prisma": "^6.0.1",
     "typescript": "^5.7.2"
   }
 }
